criacao da sessao projetos e do footer

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,10 @@
 :root {
   --color-primary: #f7e018;
+  --color-black-ground: #1b1b1b;
   --color-gray-1: #4e4e4e;
   --color-gray-2: #343434;
   --color-black: #1b1b1b;
+  --color-white: #ffffff;
   --color-background: transparent;
   --font-primary: "Inter", sans-serif;
 }
