--- a/src/Header/style.scss
+++ b/src/Header/style.scss
@@ -1,8 +1,8 @@
 .header {
-  width: 80vw;
+  width: 100vw;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 50px 0 10px 0;
+  padding: 50px 10vw 10px 10vw;
   position: fixed;
   background-color: white;
   top: 0;
