--- a/src/Footer/style.scss
+++ b/src/Footer/style.scss
@@ -1,10 +1,11 @@
 .container-footer {
-  padding: 40px 80px;
+  width: 100vw;
+  padding: 20px 40px;
   background-color: var(--color-black-ground);
 }
 
 .list-footer {
-  width: 80%;
+  width: 100%;
 }
 
 .imgLinks {
@@ -12,10 +13,18 @@
   width: 50px;
 }
 
-.imgLinks.gmail {
-  width: 80px;
+@media (max-width: 768px) {
+  .itemProfile {
+    display: none;
+  }
 }
 
-.imgLinks.wpp {
-  height: 80px;
+@media (min-width: 1024px) {
+  .container-footer {
+    padding: 40px 80px;
+  }
+
+  .list-footer {
+    width: 90%;
+  }
 }
