--- a/src/Header/style.scss
+++ b/src/Header/style.scss
@@ -26,3 +26,22 @@
   width: 50%;
   margin: auto 0;
 }
+
+@media (max-width: 1400px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    justify-content: center;
+    padding: 50px 10vw 10px 10vw;
+    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  .nav {
+    width: 100%;
+    margin: 20px 0;
+  }
+}
