--- a/src/Projects/Project/style.scss
+++ b/src/Projects/Project/style.scss
@@ -1,8 +1,16 @@
+.div-card {
+  width: 80vw;
+  height: clamp(650px, 5vw, 500px);
+  overflow-x: visible;
+  overflow-y: hidden;
+}
+
 .card-project {
-  width: 20vw;
+  width: clamp(450px, 5vw, 650px);
   border: 1px solid black;
   border-radius: 16px;
   height: 500px;
+  padding: 10px;
   background-color: var(--color-black-ground);
   color: var(--color-white);
 }
@@ -10,13 +18,36 @@
 .siteImg {
   width: 90%;
   height: 150px;
+  margin-top: 10%;
 }
 
 .techImg {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
+  margin: 0 10px;
 }
 
 .padding-card {
   padding: 0 20px;
 }
+
+.div-tech {
+  align-items: end;
+  margin: auto auto 50px auto;
+}
+
+// @media (max-width: 1400px) {
+//   .div-card {
+//     display: flex;
+//     flex-wrap: nowrap;
+//     width: 100vw;
+//     align-items: start;
+//     // justify-content: ;
+//     // overflow-x: scroll;
+//   }
+
+//   .card-project {
+//     width: 100vw;
+//     gap: 20px;
+//   }
+// }
