--- a/src/Footer/style.scss
+++ b/src/Footer/style.scss
@@ -4,6 +4,10 @@
   background-color: var(--color-black-ground);
 }
 
+.itemProfile > img {
+  height: 120px;
+  width: 120px;
+}
 .list-footer {
   width: 100%;
 }
@@ -21,7 +25,7 @@
 
 @media (min-width: 1024px) {
   .container-footer {
-    padding: 40px 80px;
+    padding: 10px 80px;
   }
 
   .list-footer {
