--- a/src/Header/style.scss
+++ b/src/Header/style.scss
@@ -2,22 +2,16 @@
   width: 100vw;
   justify-content: space-between;
   margin: 0 auto;
-  padding: 50px 10vw 10px 10vw;
+  padding: 10px 10vw 10px 10vw;
   position: fixed;
-  background-color: white;
+  background-color: var(--color-white);
   top: 0;
   left: 0;
   right: 0;
 }
 
 .logo {
-  height: 100px;
-}
-
-.list-nav {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
+  height: 70px;
 }
 
 .nav {
@@ -25,6 +19,12 @@
   align-items: center;
   width: 50%;
   margin: auto 0;
+}
+
+.list-nav {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 @media (max-width: 1400px) {
