--- a/src/Projects/Project/style.scss
+++ b/src/Projects/Project/style.scss
@@ -1,26 +1,24 @@
 .div-card {
   display: flex;
-  flex-direction: row;
-  width: 80vw;
+  flex-direction: column;
+  width: 90%;
   height: max-content;
-  overflow-x: visible;
   overflow-y: hidden;
 }
 
 .card-project {
-  width: clamp(450px, 5vw, 650px);
-  border: 1px solid black;
+  // border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 16px;
   height: max-content;
   padding: 10px;
-  background-color: var(--color-black-ground);
-  color: var(--color-white);
+  color: var(--color-black-ground);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
 
 .siteImg {
-  width: 90%;
-  height: 200px;
-  margin-top: 10%;
+  width: 95%;
+  height: 250px;
+  margin: 10px auto;
 }
 
 .techImg {
@@ -29,13 +27,12 @@
   margin: 0 10px;
 }
 
-.padding-card {
-  padding: 0 20px;
-}
-
 .div-tech {
   align-items: end;
-  margin: auto auto 50px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0 10px 0;
 }
 
 @media (min-width: 1400px) {
@@ -46,19 +43,14 @@
 
   .card-project {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 10px 0 0;
-
     width: 80%;
   }
 
   .siteImg {
-    height: 100%;
-    width: 400px;
-    margin: 0;
     border: 1px solid transparent;
-    border-radius: 16px;
+    border-radius: 8px;
   }
 }
