--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,6 @@
-/* :root {
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-} */
-
-/* body {
+body {
   margin: 0;
-  display: flex;
-
-  /* min-width: 320px; */
-/* min-height: 100vh; */
-/* } */
+  padding: 0;
+  box-sizing: border-box;
+  width: 100vw;
+}
